python/testData/highlighting/fStringTerminatedByQuoteInsideStringLiteralBefore312.py
s = f'foo{"<error descr="Python version 3.11 does not allow nesting of string literals with the same quote type inside f-strings">'</error>"}baz'